@startuml
title Create Command Class View

class Parser {
  + parse(input: String): ParsedCommand
}

class ParsedCommand {
  + name(): String
}

class CG2StocksTracker {
  + run()
}

class PortfolioBook {
  + createPortfolio(name: String)
  + getActivePortfolioName(): String
}

class Storage {
  + save(portfolioBook: PortfolioBook)
}

class Ui {
  + showMessage(message: String)
}

Parser ..> ParsedCommand
CG2StocksTracker ..> PortfolioBook : createPortfolio(name)
CG2StocksTracker ..> Storage : save()
CG2StocksTracker ..> Ui : showMessage(...)
@enduml
